--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+html {
+    background-color: #ecf0f5;
+    height: 100%;
+    overflow: hidden;
+}
+
+* {
+    font-size: 14px;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
