--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,9 +1,9 @@
-<h1 *ngIf="!hasPlayer2Move && !gameFinalized" class="text-center">Player 2 has 5 minutes to make a move</h1>
-<h1 *ngIf="hasPlayer2Move && !gameFinalized" class="text-center">You have 5 minutes to reveal your move</h1>
+<h1 *ngIf="!hasPlayer2Move && !gameFinalized" class="text-center">Waiting for player's 2 move...</h1>
+<h1 *ngIf="hasPlayer2Move && !gameFinalized" class="text-center">Reveal your move!</h1>
 <h1 *ngIf="gameFinalized" class="text-center">Game finalized!</h1>
 <div class="row justify-content-center">
     <div class="col-md-8 text-center">
-        <ngb-alert *ngIf="!gameFinalized" [dismissible]="false" [type]="'warning'">{{ salt }} is your secret.</ngb-alert>
+        <ngb-alert [dismissible]="false" [type]="'info'">Share <b>{{completeUrl}}</b> with player 2</ngb-alert>
         <ngb-alert *ngIf="won && gameFinalized" [dismissible]="false" [type]="'success'">🎉 You won! Congratulations! 🎉 </ngb-alert>
         <ngb-alert *ngIf="!won && gameFinalized" [dismissible]="false" [type]="'danger'"> Better luck next time 😩 </ngb-alert>
     </div>
